--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
    <section class="bg-dark text-white">
     <div class="container text-center">
       <h2 class="mb-4">Feel Free to Download My Resume!</h2>
-      <a class="btn btn-light btn-xl sr-button" href="./resume/Bruce_Yu's Resume" download>Download Now!</a>
+      <a class="btn btn-light btn-xl sr-button" href="./resume/Bruce_Yu's Resume.pdf" download>Download Now!</a>
     </div>
   </section>
 
