--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       </div>
 
       <div class="col-lg-7 ">
-        <img src="img/me.jpg" alt="" class="me">
+        <img src="img/me.JPG" alt="" class="me">
       </div>
       <div class="col-lg-5" style="margin-top: 20px;">
         <p class="mb-4 aboutme">A coding enthusiast recently completed an intensive coding bootcamp Coding Dojo, Silicon Valley bootcamp, and I am excited to enter the world of web development, seeking new opportunities as a web application developer.</p>
